Improve data description formatting, and add specific question

--- a/project_009_33_individual.ipynb
+++ b/project_009_33_individual.ipynb
@@ -90,14 +90,6 @@
       "\u001b[33mlgl\u001b[39m (1): subscribe\n",
       "\n",
       "\u001b[36mℹ\u001b[39m Use `spec()` to retrieve the full column specification for this data.\n",
-      "\u001b[36mℹ\u001b[39m Specify the column types or set `show_col_types = FALSE` to quiet this message.\n",
-      "\u001b[1mRows: \u001b[22m\u001b[34m1535\u001b[39m \u001b[1mColumns: \u001b[22m\u001b[34m5\u001b[39m\n",
-      "\u001b[36m──\u001b[39m \u001b[1mColumn specification\u001b[22m \u001b[36m────────────────────────────────────────────────────────\u001b[39m\n",
-      "\u001b[1mDelimiter:\u001b[22m \",\"\n",
-      "\u001b[31mchr\u001b[39m (3): hashedEmail, start_time, end_time\n",
-      "\u001b[32mdbl\u001b[39m (2): original_start_time, original_end_time\n",
-      "\n",
-      "\u001b[36mℹ\u001b[39m Use `spec()` to retrieve the full column specification for this data.\n",
       "\u001b[36mℹ\u001b[39m Specify the column types or set `show_col_types = FALSE` to quiet this message.\n"
      ]
     },
@@ -174,6 +166,32 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "players <- read_csv(\"players.csv\")\n",
+    "head(players)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "39fa5643-20dc-4797-9d8b-d2ea1e1b838c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1mRows: \u001b[22m\u001b[34m1535\u001b[39m \u001b[1mColumns: \u001b[22m\u001b[34m5\u001b[39m\n",
+      "\u001b[36m──\u001b[39m \u001b[1mColumn specification\u001b[22m \u001b[36m────────────────────────────────────────────────────────\u001b[39m\n",
+      "\u001b[1mDelimiter:\u001b[22m \",\"\n",
+      "\u001b[31mchr\u001b[39m (3): hashedEmail, start_time, end_time\n",
+      "\u001b[32mdbl\u001b[39m (2): original_start_time, original_end_time\n",
+      "\n",
+      "\u001b[36mℹ\u001b[39m Use `spec()` to retrieve the full column specification for this data.\n",
+      "\u001b[36mℹ\u001b[39m Specify the column types or set `show_col_types = FALSE` to quiet this message.\n"
+     ]
     },
     {
      "data": {
@@ -244,9 +262,7 @@
     }
    ],
    "source": [
-    "players <- read_csv(\"players.csv\")\n",
     "sessions <- read_csv(\"sessions.csv\")\n",
-    "head(players)\n",
     "head(sessions)"
    ]
   },
@@ -258,20 +274,26 @@
     "The dataset includes two files, `players.csv` and `sessions.csv`.\n",
     "\n",
     "`players.csv` includes information about each player (user), like their experience, whether they are subscribed. This includes 7 variables:\n",
-    "- **experience** is a character string type categorical variable that shows the player's relative experience in the game, with *Pro*, *Veteran*, *Amateur*, and *Regular* as examples.\n",
-    "- **subscribe** is a logical variable that results in TRUE or FALSE, depending on if the player is subscribed to a game-related newsletter.\n",
-    "- **hashedEmail** is a character string variable that displays the unique hashed email of the user.\n",
-    "- **playedHours** is a double numerical variable that shows how many hours the player has played.\n",
-    "- **name** is a character string variable that displays the first name of the user.\n",
-    "- **gender** is a character string variable that displays the gender of the user.\n",
-    "- **Age** is a double numerical variable that displays the age of the user (in years).\n",
+    "\n",
+    "|Variable|Type|Description\n",
+    "|-----------|-------|------------|\n",
+    "|experience|character|Categorical variable that shows the player's relative experience level|\n",
+    "|subscribe|logical|If the player is subscribed to a game-related newsletter|\n",
+    "|hashedEmail|character|Unique hashed email of user|\n",
+    "|playedHours|double|Hours player has played|\n",
+    "|name|character|First name of player|\n",
+    "|gender|character|Gender of player|\n",
+    "|Age|integer|Age of player (years)|\n",
     "\n",
     "`sessions.csv` includes the hashed (but unique) email of users, with their start time in UTF format and normal format. This includes 5 variables.\n",
-    "- **hashedEmail**, which was mentioned before.\n",
-    "- **start_time** is a character string variable that displays the date and time of when the session started.\n",
-    "- **end_time** is a character string variable that displays the date and time of when the session ended.\n",
-    "- **original_start_time** is a double numerical variable that shows the start time of the session in UNIX format (ms). \n",
-    "- **original_end_time** is a double numerical variable that shows the end time of the session in UNIX format (ms). "
+    "\n",
+    "|Variable|Type|Description\n",
+    "|-----------|-------|------------|\n",
+    "|hashedEmail|character|Unique hashed email of user|\n",
+    "|start_time|character|Date and time of when the session started|\n",
+    "|end_time|character|Date and time of when the session ended|\n",
+    "|original_start_time|double|Start time of the session in UNIX format (ms)|\n",
+    "|original_end_time|double|End time of the session in UNIX format (ms)|"
    ]
   },
   {
@@ -284,96 +306,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "e431cd23-4824-4352-8cc1-fa5653fd8ef1",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<table class=\"dataframe\">\n",
-       "<caption>A tibble: 1 × 1</caption>\n",
-       "<thead>\n",
-       "\t<tr><th scope=col>count</th></tr>\n",
-       "\t<tr><th scope=col>&lt;int&gt;</th></tr>\n",
-       "</thead>\n",
-       "<tbody>\n",
-       "\t<tr><td>196</td></tr>\n",
-       "</tbody>\n",
-       "</table>\n"
-      ],
-      "text/latex": [
-       "A tibble: 1 × 1\n",
-       "\\begin{tabular}{l}\n",
-       " count\\\\\n",
-       " <int>\\\\\n",
-       "\\hline\n",
-       "\t 196\\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/markdown": [
-       "\n",
-       "A tibble: 1 × 1\n",
-       "\n",
-       "| count &lt;int&gt; |\n",
-       "|---|\n",
-       "| 196 |\n",
-       "\n"
-      ],
-      "text/plain": [
-       "  count\n",
-       "1 196  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table class=\"dataframe\">\n",
-       "<caption>A tibble: 1 × 1</caption>\n",
-       "<thead>\n",
-       "\t<tr><th scope=col>count</th></tr>\n",
-       "\t<tr><th scope=col>&lt;int&gt;</th></tr>\n",
-       "</thead>\n",
-       "<tbody>\n",
-       "\t<tr><td>1535</td></tr>\n",
-       "</tbody>\n",
-       "</table>\n"
-      ],
-      "text/latex": [
-       "A tibble: 1 × 1\n",
-       "\\begin{tabular}{l}\n",
-       " count\\\\\n",
-       " <int>\\\\\n",
-       "\\hline\n",
-       "\t 1535\\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/markdown": [
-       "\n",
-       "A tibble: 1 × 1\n",
-       "\n",
-       "| count &lt;int&gt; |\n",
-       "|---|\n",
-       "| 1535 |\n",
-       "\n"
-      ],
-      "text/plain": [
-       "  count\n",
-       "1 1535 "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"Number of Observations in Players: 196\"\n",
+      "[1] \"Number of Observations in Sessions: 1535\"\n"
+     ]
     }
    ],
    "source": [
-    "obsPlayers <- summarize(players, count = n())\n",
-    "obsSessions <- summarize(sessions, count = n())\n",
-    "obsPlayers\n",
-    "obsSessions"
+    "obsPlayers <- summarize(players, count = n()) |> pull(count)\n",
+    "obsSessions <- summarize(sessions, count = n()) |> pull(count)\n",
+    "print(paste(\"Number of Observations in Players:\", obsPlayers))\n",
+    "print(paste(\"Number of Observations in Sessions:\", obsSessions))"
    ]
   },
   {
@@ -413,7 +363,19 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
+    }
+   ],
+   "source": [
+    "summarizedPlayers <- summary(players)\n",
+    "summarizedPlayers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "a8f074d1-db70-41bd-898e-77156250d02c",
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/plain": [
@@ -440,10 +402,36 @@
     }
    ],
    "source": [
-    "summarizedPlayers <- summary(players)\n",
     "summarizedSessions <- summary(sessions)\n",
-    "summarizedPlayers\n",
     "summarizedSessions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f7cced9-4eca-4af1-befb-d88494124c4d",
+   "metadata": {},
+   "source": [
+    "Let's find the mean, to 2 decimal places, of the numerical variables. Since the summary function already kindly found the mean, median, and other summary statistics, we'll just use the data it gives, up to 2 decimal places, for the means:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c2a5ee1-0a8e-418b-8496-ae71895c57df",
+   "metadata": {},
+   "source": [
+    "For `players.csv`:\n",
+    "|Variable|Mean\n",
+    "|-------|-------|\n",
+    "|played_hours|5.85|\n",
+    "|Age|21.14|\n",
+    "\n",
+    "For `sessions.csv`:\n",
+    "|Variable|Mean\n",
+    "|-------|-------|\n",
+    "|original_start_time|1.72e+12|\n",
+    "|original_end_time|1.72e+12|\n",
+    "\n",
+    "(perhaps not the most helpful statistic)"
    ]
   },
   {
@@ -459,8 +447,11 @@
    "id": "cba9f4e5-6257-4039-bb17-64cd59a90d44",
    "metadata": {},
    "source": [
-    "I will address the *broad question of interest* of:  \n",
-    "What player characteristics and behaviours are most predictive of subscribing to a game-related newsletter, and how do these features differ between various player types?"
+    "I will address the **broad question of interest** of:  \n",
+    "***What player characteristics and behaviours are most predictive of subscribing to a game-related newsletter, and how do these features differ between various player types?***\n",
+    "\n",
+    "My specific question will be:\n",
+    "Can the variables of Age, gender, played_hours, and experience predict whether a player is subscribed to a game-related newsletter in `players.csv`?"
    ]
   },
   {
