Change format of method section

--- a/project_009_33_individual.ipynb
+++ b/project_009_33_individual.ipynb
@@ -11,10 +11,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f3fac0e-c367-4bf3-b10b-ba3482f8507b",
+   "id": "a93808b0-2eb1-4e4a-946f-4b87c8508162",
    "metadata": {},
    "source": [
-    "First, let's load the tidyverse and repr packages, and download the files to meet the requirement that the .ipynb file ***\"must be fully reproducible. It must run completely from top to bottom without any additional files.\"***"
+    "## GitHub Repository  \n",
+    "https://github.com/naldonymous/dsci-100-2025w1-group-33.git"
    ]
   },
   {
@@ -69,7 +70,7 @@
    "id": "e8691cdd-f624-49dc-bc63-f34687f15d82",
    "metadata": {},
    "source": [
-    "Now, let's read the files into variables, and then get a preview of the files, to see what they're about."
+    "Let's read the files into variables, and then get a preview of the files, to see what they're about."
    ]
   },
   {
@@ -411,7 +412,7 @@
    "id": "7f7cced9-4eca-4af1-befb-d88494124c4d",
    "metadata": {},
    "source": [
-    "Let's find the mean, to 2 decimal places, of the numerical variables. Since the summary function already kindly found the mean, median, and other summary statistics, we'll just use the data it gives, up to 2 decimal places, for the means:"
+    "Let's find the mean, to 2 decimal places, of the numerical variables. Since the summary function already kindly found the mean, median, and other summary statistics, we'll just use the data it gave, up to 2 decimal places, for the means:"
    ]
   },
   {
@@ -431,7 +432,7 @@
     "|original_start_time|1.72e+12|\n",
     "|original_end_time|1.72e+12|\n",
     "\n",
-    "(perhaps not the most helpful statistic)"
+    "The means for original start and end time make sense, they are similar when rounded to 2 decimal places because they are huge numbers, recorded in ms, so it takes a while for the rounded numbers to change."
    ]
   },
   {
@@ -2546,50 +2547,21 @@
    "id": "70a34ee2-3d63-4d51-8c04-bf166112bdb2",
    "metadata": {},
    "source": [
-    "We will use knn classification. This method is appropriate because we are trying to predict if they are subscribed. Subscribed is not quantitative, so it is a classification problem, and for our purposes, we will use knn classification.\n",
+    "Looking at the data, I will use k-nearest neighbours (knn) classification. This method is appropriate because subscribe, the response variable, is catergorical and not numerical, and so using regression would not be appropriate here. We aren't predicting a numerical value.\n",
     "\n",
-    "To apply knn classification, we have to make the required assumptions that points nearby should be a similar class, and that there's not too many variables involved, and that there's enough data. And a relatively balanced class. Quantitative variables, categorical variable.\n",
+    "To apply knn classification, we have to make several assumptions:\n",
+    "- Nearby observations should all be similar classes (otherwise it predictions will be poor)\n",
+    "- There shouldn't be too many predictor variables (kNN does a lot worse as the variables increase)\n",
+    "- There should be enough data for solid training and testing\n",
+    "- The class distribution should be reasonably balanced for the dataset\n",
+    "- Each predictor variable should be...\n",
     "\n",
-    "Possible limitations/weaknesses of knn classification is that it's sensitive to k, does badly with more variables, and outliers can affect it dramatically.\n",
+    "Possible limitations/weaknesses of knn classification is that it's sensitive to k (too wavy or too smooth), does badly with more variables, and outliers can affect it dramatically.\n",
     "\n",
-    "How to compare and select the model? knn tune() neighbours\n",
+    "How to compare and select the model? Well, I will use the classic technique of finding the best amount of neighbours using tune().\n",
     "\n",
-    "\n",
-    "- How are you going to process the data to apply the model? For example: Are you splitting the data? How? How many splits? What proportions will you use for the splits? At what stage will you split? Will there be a validation set? Will you use cross validation?\n"
+    "To process the data to apply the model, I will split the data into training and testing sets. Unfortunately because how little info there is, the proportion will be x. At what stage will you split? Will there be a validation set? Will you use cross validation? Yes.\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a93808b0-2eb1-4e4a-946f-4b87c8508162",
-   "metadata": {},
-   "source": [
-    "## GitHub Repository  \n",
-    "https://github.com/naldonymous/dsci-100-2025w1-group-33.git"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dee856e3-306f-4bca-bbc9-c98257fbdd1e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b44b9051-ebc2-437c-aa8d-666052645072",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "99ef28b9-fc50-427b-993a-f6be8cd95bfc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
