Fix markdown table formatting

--- a/project_009_33_individual.ipynb
+++ b/project_009_33_individual.ipynb
@@ -294,7 +294,7 @@
     "\n",
     "`players.csv` includes information about each player, with 7 variables:\n",
     "\n",
-    "|Variable|Type|Description\n",
+    "|Variable|Type|Description|\n",
     "|-----------|-------|------------|\n",
     "|experience|character|The player's experience level|\n",
     "|subscribe|logical|If the player is subscribed to a game-related newsletter|\n",
@@ -306,7 +306,7 @@
     "\n",
     "`sessions.csv` includes player activity, with 5 variables.\n",
     "\n",
-    "|Variable|Type|Description\n",
+    "|Variable|Type|Description|\n",
     "|-----------|-------|------------|\n",
     "|hashedEmail|character|Unique hashed email of player|\n",
     "|start_time|character|Date and time of when the session started|\n",
@@ -552,13 +552,13 @@
    "metadata": {},
    "source": [
     "For `players.csv`:\n",
-    "|Variable|Mean\n",
+    "|Variable|Mean|\n",
     "|-------|-------|\n",
     "|played_hours|5.85|\n",
     "|Age|21.14|\n",
     "\n",
     "For `sessions.csv`:\n",
-    "|Variable|Mean\n",
+    "|Variable|Mean|\n",
     "|-------|-------|\n",
     "|original_start_time|1.72e+12|\n",
     "|original_end_time|1.72e+12|"
